# interactive-logic

./: .gitignore  Main.hs  Makefile  flake.nix  main.hs  main.idr
BnfcParser/: grammar.cf
FFI/: termops.c
searcher/: Cargo.toml
searcher/src/: main.rs
